[project]
name = "apiintegrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.6",
    "openapi-spec-validator>=0.7.2",
    "playwright>=1.55.0",
    "prance>=25.4.8.0",
    "pydot>=4.0.1",
    "python-dotenv>=1.1.1",
]
